Fix the NewsletterForm on small screens

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1624,6 +1624,18 @@ summary {
   flex-basis: 66.666667%;
 }
 
+.basis-1\/3 {
+  flex-basis: 33.333333%;
+}
+
+.basis-1\/2 {
+  flex-basis: 50%;
+}
+
+.basis-full {
+  flex-basis: 100%;
+}
+
 .border-separate {
   border-collapse: separate;
 }
@@ -1845,6 +1857,10 @@ summary {
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .p-6 {
@@ -2821,6 +2837,10 @@ pre {
 @media (min-width: 768px) {
   .md\:min-h-0 {
     min-height: 0px;
+  }
+
+  .md\:basis-2\/3 {
+    flex-basis: 66.666667%;
   }
 
   .md\:flex-row {
